--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,16 @@ font-size: 0.65rem;
     color: rgb(0, 255, 0);
 }
 
+.event-status.unsafe{
+    background-color: rgb(168, 20, 10);
+    color: rgb(255, 78, 8);
+}
+
+.event-status.warn{
+    background-color: rgb(168, 165, 10);
+    color: rgb(255, 230, 8);
+}
+
 .weather-card {
     background-color: rgb(255, 255, 255);
     padding: 5px;
