--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,12 @@ font-size: 0.65rem;
     margin: 50px 0px 90px 0
 }
 
+.summaryConatiner{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
 .searchbox {
     display: inline-block;
     margin-right: 10px;
@@ -133,3 +139,5 @@ font-size: 0.65rem;
     width: 80%;
     height: 100%;
 }
+
+
