--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 h1, h2, h3, h4, h5, h6 {
     margin: 0;
     font-size: 1rem;
+    font-family: 'poppins', Georgia, 'Times New Roman', Times, serif
 }
 
 p {
@@ -13,6 +14,17 @@ p {
 
 #weatherTemplate{
     display: none;
+}
+
+#weatherLocation{
+    margin-bottom: 15px;
+}
+
+.searchContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 5vh 0px 5vh 0px
 }
 
 .weatherData{
@@ -31,11 +43,34 @@ p {
 font-size: 0.65rem;
 }
 
-.searchContainer {
+.nav-btns {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin: 50px 0px 90px 0
+    margin: 5vh 0px 5vh 0px;
+    gap: 5px;
+}
+
+button.active{
+    background-color: rgb(0, 155, 202) !important;
+    color: white!important;
+}
+
+
+
+.nav-btns > button >a{
+    color: rgb(17, 17, 17);
+    text-decoration: none;
+}
+
+.nav-btns > button{
+    text-decoration: none;
+    padding: 10px 20px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
+    background-color: rgb(0, 195, 255);
+    border: 0px;
+    border-radius: 5px;
 }
 
 .summaryConatiner{
@@ -76,6 +111,11 @@ font-size: 0.65rem;
 .event-status.warn{
     background-color: rgb(168, 165, 10);
     color: rgb(255, 230, 8);
+}
+
+.event-status.error{
+    background-color: rgb(126, 126, 126);
+    color: rgb(230, 230, 230);
 }
 
 .weather-card {
@@ -138,6 +178,35 @@ font-size: 0.65rem;
 .iconImg{
     width: 80%;
     height: 100%;
+}
+
+.summaryItem > #weatherImage{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+@media (max-width: 576px) {
+    .weather-card {
+        width: 40vw;
+        height: 220px;
+        border: 1px solid rgb(212, 212, 212);
+        border-radius: 3px;
+        margin: 2px;
+    }
+
+    .weather-details {
+        height: 20%;
+        font-size: 0.65rem;
+    }
+
+    .nav-btns {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        margin: 5vh 5px 5vh 5px !important;
+    }
+    
 }
 
 
